--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-aws-cdk-lib==2.29.1
+fastapi==0.104.1
+mangum==0.17.0
+transformers==4.36.0
+python-dotenv==1.1.0
 boto3==1.24.53
-constructs>=10.0.0,<11.0.0
-fastapi==0.79.0
-mangum==0.15.1
-transformers[torch]==4.21.1
-python-dotenv==1.0.0
-opencv-python==4.8.1.78
 numpy==1.24.3
-torch==2.0.1
 insightface==0.7.3
-elasticsearch==8.9.0
 python-multipart==0.0.6
-Pillow==10.0.0
-onnxruntime==1.15.1
-pydantic==1.10.12
-pathlib2==2.3.7
-typing-extensions==4.7.1
+torch==2.1.0
+torchvision==0.16.0
+opencv-python-headless==4.8.1.78
+onnxruntime==1.16.3
+onnx==1.15.0
+pillow==10.0.1
+tqdm==4.66.1 
+elasticsearch==8.10.0
+
