--- a/model_endpoint/docker/Dockerfile
+++ b/model_endpoint/docker/Dockerfile
@@ -48,7 +48,7 @@ RUN pip3 install --upgrade pip && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} transformers==4.36.0 && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} --find-links https://download.pytorch.org/whl/torch_stable.html torch==2.1.0+cpu && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} --find-links https://download.pytorch.org/whl/torch_stable.html torchvision==0.16.0+cpu && \
-    pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} numpy==1.24.3 && \
+    pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} "numpy<2.0" && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} opencv-python-headless==4.8.1.78 && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} onnxruntime==1.16.3 && \
     pip3 install --no-cache-dir --target ${LAMBDA_TASK_ROOT} onnx==1.15.0 && \
