--- a/model_endpoint/runtime/serving_api/requirements.txt
+++ b/model_endpoint/runtime/serving_api/requirements.txt
@@ -3,7 +3,7 @@ mangum==0.17.0
 transformers==4.36.0
 python-dotenv==1.0.1
 boto3==1.24.53
-numpy==1.24.3
+numpy>=1.24.3,<2.0
 insightface==0.7.3
 python-multipart==0.0.6
 torch==2.1.0
