--- a/model_endpoint/runtime/serving_api/requirements.txt
+++ b/model_endpoint/runtime/serving_api/requirements.txt
@@ -6,8 +6,9 @@ boto3==1.24.53
 numpy>=1.24.3,<2.0
 insightface==0.7.3
 python-multipart==0.0.6
-torch==2.1.0
-torchvision==0.16.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
 opencv-python-headless==4.8.1.78
 onnxruntime==1.16.3
 onnx==1.15.0
